Dashboard added in Swagger file, missing fix numeric format to some endpoints
